--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title> my page</title>
 </head>
 <body>
-<img src="C:\Users\BILIL\Documents\GitHub\yenealem.github.io\image.jpg" width=40% height 40%>
+<img src="image.jpeg" width=40% height 40%>
 
 <h1> my first page!</h1>
 </body>
