--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title> my page</title>
 </head>
 <body>
-<img src="image.jpeg" width=40% height 40%>
+<img src="image.jpg" width=12.5% height=30%>
 
 <h1> my first page!</h1>
 </body>
