--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 </head>
 <body>
 <img src="image.jpg" width=12.5% height=30%>
+<h4> Name:</h4> Yenealem Nibret Settegne
+
+
 
 <h1> my first page!</h1>
 </body>
