new images about me are added.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,58 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+   <meta charset="UTF-8">
 <title> my page</title>
+
+<link href="AboutMeStyle.css"  rel="stylesheet"/>
+
 </head>
 <body>
-<img src="image.jpg" width=12.5% height=30%>
-<h4> Name:</h4> Yenealem Nibret Settegne
+
+   <section style="background-image:url('./images/background_image.jpg');"> 
+      <h6>section background</h6>
+      <img src="./images/image.jpg" alt="avatar" style="border-radius:50%;width:200px;height:200px">
+   </section>
+
+    <p>My name is<em> Yenealem</em>. I am idealist, perfectionist, social servicing, and visionary man.</p>
+
+   <hr>
+
+<h4> My page contents are:</h4>
+<ul>
+<li><a href="#" title="Click here to open Lab - assignment 01"> Lab01 - HomePage</a>
+<li><a href="#" title="Click here to open Lab - assignment 02"> Lab02 - AboutMe</a>
+<li><a href="#" title="Click here to open Lab - assignment 03"> Lab03 - Recipe</a>
+<li><a href="#" title="Click here to open Lab - assignment 04"> Lab04 - Movie Review</a>
+<li><a href="#" title="Click here to open Lab - assignment 05"> Lab05</a>
+<li><a href="#" title="Click here to open Lab - assignment 06"> Lab06</a>
+<li><a href="#" title="Click here to open Lab - assignment 07"> Lab07</a>
+<li><a href="#" title="Click here to open Lab - assignment 08"> Lab08</a>
+<li><a href="#" title="Click here to open Lab - assignment 09"> Lab09</a>
+<li><a href="#" title="Click here to open Lab - assignment 10"> Lab10</a>
+<li><a href="#" title="Click here to open Final - assignment"> Final Project</a>
+</ul>
+
+<footer style="margin-top: 100px;column-count:2 ;">
 
 
 
-<h1> my first page!</h1>
-</body>
+<div style="text-align:left">
+<address>
+Written by <a href="mailto:mayWAP@gmail.com">Settegne, Yenealem</a>.<br>
+FairField, IOWA<br>
+Box 578, 1000N 4th Street<br>
+USA
+</address>
+
+</div>
+<div style="text-align:right">
+<a href="http://validator.w3.org/">
+   <img alt="validator-1" src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png"></a>
+<a href="http://jigsaw.w3.org/css-validator/"><img alt="validator-2" src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png"></a>
+<br><br></div>
+
+</footer>
+
+
 </html>
