--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@ USA
 </div>
 <div style="text-align:right">
 <a href="http://validator.w3.org/">
-   <img alt="validator-1" src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png"></a>
-<a href="http://jigsaw.w3.org/css-validator/"><img alt="validator-2" src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png"></a>
+   <img alt="validator-1" src="https://manalabs.org/img/w3c-html.png"></a>
+<a href="http://jigsaw.w3.org/css-validator/"><img alt="validator-2" src="https://manalabs.org/img/w3c-css.png"></a>
 <br><br></div>
 
 </footer>
