--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img src="./images/image.jpg" alt="avatar" style="border-radius:50%;width:200px;height:200px">
    </section>
 
-    <p>My name is<em> Yenealem</em>. I am <i>idealist</i>, <i>perfectionist</i>, <i> social servicing</i>, and <i>visionary man.</i></p>
+    <p>My name is<em> Yenealem</em>. <span>I am </span><i>idealist</i>, <i>perfectionist</i>, <i> social servicing</i>, and <i>visionary man.</i></p>
 
    <hr>
 
@@ -33,7 +33,7 @@
 <li><a href="#" title="Click here to open Final - assignment"> Final Project</a>
 </ul>
 
-<footer style="margin-top: 100px;column-count:2 ;">
+<footer>
 
 
 
