--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
       <img src="./images/image.jpg" alt="avatar" style="border-radius:50%;width:200px;height:200px">
    </section>
 
-    <p>My name is<em> Yenealem</em>. <span>I am </span><i>idealist</i>, <i>perfectionist</i>, <i> social servicing</i>, and <i>visionary man.</i></p>
+    <p>My name is<em> Yenealem</em>. I am an <i>idealist</i>, <i>perfectionist</i>, <i> social servicing</i>, and <i>visionary man.</i></p>
 
    <hr>
 
 <h4> My page contents are:</h4>
 <ul>
 <li><a href="#" title="Click here to open Lab - assignment 01"> Lab01 - HomePage</a>
-<li><a href="#" title="Click here to open Lab - assignment 02"> Lab02 - AboutMe</a>
+<li><a href="AboutMe" title="Click here to open Lab - assignment 02"> Lab02 - AboutMe</a>
 <li><a href="#" title="Click here to open Lab - assignment 03"> Lab03 - Recipe</a>
 <li><a href="#" title="Click here to open Lab - assignment 04"> Lab04 - Movie Review</a>
 <li><a href="#" title="Click here to open Lab - assignment 05"> Lab05</a>
