--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 <h4> My page contents are:</h4>
 <ul>
-<li><a href="#" title="Click here to open Lab - assignment 01"> Lab01 - HomePage</a>
-<li><a href="AboutMe" title="Click here to open Lab - assignment 02"> Lab02 - AboutMe</a>
+<li><a href="#" title="Click here to open Lab - assignment 01"> Lab01 - HomePage(done)</a>
+<li><a href="AboutMe" title="Click here to open Lab - assignment 02"> Lab02 - AboutMe(done)</a>
 <li><a href="#" title="Click here to open Lab - assignment 03"> Lab03 - Recipe</a>
 <li><a href="#" title="Click here to open Lab - assignment 04"> Lab04 - Movie Review</a>
 <li><a href="#" title="Click here to open Lab - assignment 05"> Lab05</a>
