Added CSS reference

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
 <title> my page</title>
 
-<link href="AboutMeStyle.css"  rel="stylesheet"/>
+<link href="AboutMeStyle.css" type="text/css" rel="stylesheet"/>
 
 </head>
 <body>
