--- a/AboutMe.html
+++ b/AboutMe.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
 
 <title> AboutMe</title>
-<link href="styleme.css" type="text/css" rel="stylesheet"/>
+<link type="text/css" rel="stylesheet" href="styleme.css">
 </head>
 <body>
 
