--- a/AboutMe.html
+++ b/AboutMe.html
@@ -15,7 +15,7 @@
 <h2>My class this quarter</h2>
 <ul>
     <li> CS-435 Algorithms</li>
-    <li> CS-472 Web Application development</li>
+    <li> CS-472 Web Application Development</li>
     <li>CS-592 Software Architecture</li>
     <li>CS-545 Web Application Architecture and Frameworks</li>
 
@@ -27,7 +27,7 @@
 <dl> 
         <dt>Author </dt> <dd> Haile Gerima </dd>  
         <dt>Genre </dt> <dd> Thriller(<a href="https://www.youtube.com/watch?v=XsO6nbRffF0" title= "Hint: click to further information about SANKOFA video."> more</a>)</dd>
-        <dt>Year of publication </dt> <dd> 2002 </dd>    
+        <dt>Year of publication </dt> <dd> 1993 </dd>    
     
     </dl>
 </li>
