--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <ul>
 <li><a href="#" title="Click here to open Lab - assignment 01"> Lab01 - HomePage(done)</a>
 <li><a href="AboutMe" title="Click here to open Lab - assignment 02"> Lab02 - AboutMe(done)</a>
+<li><a href="Homework-1" title="Click here to open Homwork-1"> Homework-1(done)</a>
 <li><a href="#" title="Click here to open Lab - assignment 03"> Lab03 - Recipe</a>
 <li><a href="#" title="Click here to open Lab - assignment 04"> Lab04 - Movie Review</a>
 <li><a href="#" title="Click here to open Lab - assignment 05"> Lab05</a>
@@ -34,9 +35,6 @@
 </ul>
 
 <footer>
-
-
-
 <div style="text-align:left">
 <address>
 Written by <a href="mailto:mayWAP@gmail.com">Settegne, Yenealem</a>.<br>
