--- a/Homework-1.html
+++ b/Homework-1.html
@@ -83,11 +83,11 @@ One 9-inch pie<br>
 <a href="#">Search for other lemon meringue pie recipes</a><br>
 <a href="#">Home</a>
 <footer>
-<address>
-&copy Copyright; 2012 Granny's Pies<br>
-A Granny's Pies Production<br>
-All rights reserved            
-</address>
+<pre>
+&copy Copyright; 2012 Granny's Pies
+         A Granny's Pies Production
+               All rights reserved.
+</pre>
 <div>
 <a href="http://validator.w3.org/">
 <img alt="validator-1" src="https://manalabs.org/img/w3c-html.png"></a>
