--- a/Homework-1.html
+++ b/Homework-1.html
@@ -89,7 +89,7 @@ One 9-inch pie<br>
                All rights reserved.
 </pre>
 <div>
-<a href="http://validator.w3.org/">
+<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fvalidator.w3.org%2Fnu%2F%3Fdoc%3Dhttps%253A%252F%252Fyenealem-fl.github.io%252Fyenealem.github.io%252F">
 <img alt="validator-1" src="https://manalabs.org/img/w3c-html.png"></a>
 <a href="http://jigsaw.w3.org/css-validator/">
 <img alt="validator-2" src="https://manalabs.org/img/w3c-css.png"></a>
