--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ USA
 <div style="text-align:right">
 <a href="http://validator.w3.org/">
    <img alt="validator-1" src="https://manalabs.org/img/w3c-html.png"></a>
-<a href="http://jigsaw.w3.org/css-validator/"><img alt="validator-2" src="https://manalabs.org/img/w3c-css.png"></a>
+<a href="http://jigsaw.w3.org/css-validator/validator#css"><img alt="validator-2" src="https://manalabs.org/img/w3c-css.png"></a>
 <br><br></div>
 
 </footer>
