--- a/AboutMe.html
+++ b/AboutMe.html
@@ -67,10 +67,10 @@ Happy: <img class="picture_1" alt="happy picture" src="./images/happy-african-ki
     
     </div>
     <div style="text-align:right">
-    <a href="http://validator.w3.org/">
-       <img alt="validator-1" src="https://manalabs.org/img/w3c-html.png"></a>
-    <a href="http://jigsaw.w3.org/css-validator/"><img alt="validator-2" src="https://manalabs.org/img/w3c-css.png"></a>
-    <br><br></div>
+    <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2FAboutMe">
+   <img alt="validator-1" src="https://manalabs.org/img/w3c-html.png"></a>
+<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2FAboutMe"><img alt="validator-2" src="https://manalabs.org/img/w3c-css.png"></a>
+<br><br></div>
     
     </footer>
 </body>   
