--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 <ul>
 <li><a href="#" title="Click here to open Lab - assignment 01"> Lab01 - HomePage(done)</a>
 <li><a href="AboutMe" title="Click here to open Lab - assignment 02"> Lab02 - AboutMe(done)</a>
-<li><a href="Homework-1" title="Click here to open Homwork-1"> Homework-1(done)</a>
-<li><a href="#" title="Click here to open Lab - assignment 03"> Lab03 - Recipe</a>
+<li><a href="Recipe" title="Click here to open Homwork-1"> Lab03 - Recipe(done)</a>
 <li><a href="#" title="Click here to open Lab - assignment 04"> Lab04 - Movie Review</a>
 <li><a href="#" title="Click here to open Lab - assignment 05"> Lab05</a>
 <li><a href="#" title="Click here to open Lab - assignment 06"> Lab06</a>
@@ -45,9 +44,14 @@ USA
 
 </div>
 <div style="text-align:right">
-<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2FAboutMe">
+
+
+
+
+<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fvalidator.w3.org%2Fnu%2F%3Fdoc%3Dhttps%253A%252F%252Fyenealem-fl.github.io%252Fyenealem.github.io%252F">
+
    <img alt="validator-1" src="https://manalabs.org/img/w3c-html.png"></a>
-<a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2FAboutMe&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"><img alt="validator-2" src="https://manalabs.org/img/w3c-css.png"></a>
+<a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"><img alt="validator-2" src="https://manalabs.org/img/w3c-css.png"></a>
 <br><br></div>
 
 </footer>
