--- a/AboutMe.html
+++ b/AboutMe.html
@@ -69,7 +69,7 @@ Happy: <img class="picture_1" alt="happy picture" src="./images/happy-african-ki
     <div style="text-align:right">
     <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2FAboutMe">
    <img alt="validator-1" src="https://manalabs.org/img/w3c-html.png"></a>
-<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2FAboutMe"><img alt="validator-2" src="https://manalabs.org/img/w3c-css.png"></a>
+<a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"><img alt="validator-2" src="https://manalabs.org/img/w3c-css.png"></a>
 <br><br></div>
     
     </footer>
