--- a/Recipe.html
+++ b/Recipe.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="UTF-8">
 
-<title> Homwork-1</title>
+<title> Recipe</title>
 <link type="text/css" rel="stylesheet" href="HomeworkOne.css">
 </head>
 <body>
