--- a/Recipe.html
+++ b/Recipe.html
@@ -11,7 +11,7 @@
 
 <h1>Grandma's Lemon Meringue Pie</h1>
 
-<img src="images/pie.jpg" style="width:200px;height:200px"><br>
+<img src="images/pie.jpg" alt="pie" style="width:200px;height:200px"><br>
 
 One 9-inch pie<br>
 30 Min - Prep time<br>
@@ -37,7 +37,7 @@ One 9-inch pie<br>
 <p><h3>DIRECTIONS</h3><p>
 <ol>
     <li><b>Preheat Oven:</b> Preheat oven to 350 degrees F (175 degrees C).</li>
-    <li><b>Make Lemon Filling:</b> In a medium saucepan ...</li>
+    <li><b>Make Lemon Filling:</b> In a medium saucepan ...
         <ul>
 	<li>Whisk together 1 cup sugar, flour, cornstarch, and salt.</li>
         <li>Stir in water, lemon juice and lemon zest.</li>
@@ -49,13 +49,15 @@ One 9-inch pie<br>
         <li>Remove from heat.</li>
         <li>Pour filling into baked pastry shell.</li>
 	</ul>
-    <li><b>Make Meringue:</b> In a large glass or metal bowl ...</li>
+	</li>
+    <li><b>Make Meringue:</b> In a large glass or metal bowl ...
       
        <ul>
 	<li>Whip egg whites until foamy.</li>
        <li>Add sugar gradually, and continue to whip until stiff peaks form.</li>
        <li>Spread meringue over pie, sealing the edges at the crust.</li>
     	</ul>
+    </li>
 <li><b>Bake:</b> Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
 </ol>
 <p>This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you'll find that this recipe is delicious and also easy to follow; it's a piece of cake pie!</p>
@@ -84,7 +86,7 @@ One 9-inch pie<br>
 <a href="#">Home</a>
 <footer>
 <pre>
-&copy Copyright; 2012 Granny's Pies
+&copy; Copyright 2012 Granny's Pies
          A Granny's Pies Production
                All rights reserved.
 </pre>
