--- a/Recipe.html
+++ b/Recipe.html
@@ -19,7 +19,7 @@ One 9-inch pie<br>
 40 Min - Total<br>
 8 Servings<br>
 <hr>
-<p><h3>INGREDIENTS</h3></p>
+<h3>INGREDIENTS</h3>
 <ul>
   <li>  1 cup white sugar</li>
    <li>2 tbsp all-purpose flour</li>
@@ -34,7 +34,7 @@ One 9-inch pie<br>
     <li>6 tbsp white sugar</li>
 </ul>
 <hr>
-<p><h3>DIRECTIONS</h3><p>
+<h3>DIRECTIONS</h3>
 <ol>
     <li><b>Preheat Oven:</b> Preheat oven to 350 degrees F (175 degrees C).</li>
     <li><b>Make Lemon Filling:</b> In a medium saucepan ...
@@ -93,7 +93,7 @@ One 9-inch pie<br>
 <div>
 <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fvalidator.w3.org%2Fnu%2F%3Fdoc%3Dhttps%253A%252F%252Fyenealem-fl.github.io%252Fyenealem.github.io%252F">
 <img alt="validator-1" src="https://manalabs.org/img/w3c-html.png"></a>
-<a href="http://jigsaw.w3.org/css-validator/">
+<a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2FRecipe&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
 <img alt="validator-2" src="https://manalabs.org/img/w3c-css.png"></a>
 </div>
 </footer>
