--- a/Recipe.html
+++ b/Recipe.html
@@ -91,9 +91,9 @@ One 9-inch pie<br>
                All rights reserved.
 </pre>
 <div>
-<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fvalidator.w3.org%2Fnu%2F%3Fdoc%3Dhttps%253A%252F%252Fyenealem-fl.github.io%252Fyenealem.github.io%252F">
+<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2FRecipe">
 <img alt="validator-1" src="https://manalabs.org/img/w3c-html.png"></a>
-<a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2FRecipe&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+<a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fvalidator.w3.org%2Fnu%2F%3Fdoc%3Dhttps%253A%252F%252Fyenealem-fl.github.io%252Fyenealem.github.io%252FRecipe&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
 <img alt="validator-2" src="https://manalabs.org/img/w3c-css.png"></a>
 </div>
 </footer>
