--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <li><a href="#" title="Click here to open Lab - assignment 01"> Lab01 - HomePage(done)</a>
 <li><a href="AboutMe" title="Click here to open Lab - assignment 02"> Lab02 - AboutMe(done)</a>
 <li><a href="Recipe" title="Click here to open Food recipe"> Lab03 - Recipe(done)</a>
-<li><a href="GradePage" title="Click here to open grade submission page"> Lab04 - GradePage</a>
+<li><a href="GradesPage" title="Click here to open grade submission page"> Lab04 - GradePage</a>
 <li><a href="#" title="Click here to open Lab - assignment 05"> Lab05</a>
 <li><a href="#" title="Click here to open Lab - assignment 06"> Lab06</a>
 <li><a href="#" title="Click here to open Lab - assignment 07"> Lab07</a>
