--- a/GradesPage.html
+++ b/GradesPage.html
@@ -39,9 +39,11 @@
         <tr>
         <td colspan="2"><input type="checkbox" name="pledge"> I pledge that the whole information I fed is correct.</td></tr>
         </table>
+	<tr><td colspan="2"</td></tr>
         <input type="submit">
     </form>
-
+</body>
+<br><br>
 <footer>
 <div>
 <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2FGradesPage">
