space added on validators' icons

--- a/GradesPage.html
+++ b/GradesPage.html
@@ -38,8 +38,8 @@
         </td>
         <tr>
         <td colspan="2"><input type="checkbox" name="pledge"> I pledge that the whole information I fed is correct.</td></tr>
-        </table>
-	<tr><td colspan="2"</td></tr>
+        </table><br><br>
+	
         <input type="submit">
     </form>
 </body>
