--- a/GradesPage.html
+++ b/GradesPage.html
@@ -42,7 +42,6 @@
 	
         <input type="submit">
     </form>
-</body>
 
 <footer>
 <div>
@@ -52,3 +51,6 @@
 <img alt="validator-2" src="https://manalabs.org/img/w3c-css.png"></a>
 </div>
 </footer>
+</body>
+
+</html>
