--- a/Signup.html
+++ b/Signup.html
@@ -6,7 +6,7 @@
 <link href="signupstyle.css" rel="stylesheet"/>
 </head>
 <body>
-<img src="images/miu.jpg" width=200px height=200px>
+<img src="images/miu.jpg" alt="logo">
 <hr>
     <form method="post" action="http://mumstudents.org/params.php">
         <h3> Grade submission form</h3>
