--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <li><a href="Recipe" title="Click here to open Food recipe"> Lab03 - Recipe(done)</a>
 <li><a href="GradesPage" title="Click here to open grade submission page"> Lab04 - GradePage</a>
 <li><a href="Signup" title="Click here to open signup form"> Lab05 - Signup form</a>
-<li><a href="#" title="Click here to open Lab - assignment 06"> Lab06</a>
+<li><a href="MovieReview" title="Click here to open movie review form"> Lab06 - Movie review</a>
 <li><a href="#" title="Click here to open Lab - assignment 07"> Lab07</a>
 <li><a href="#" title="Click here to open Lab - assignment 08"> Lab08</a>
 <li><a href="#" title="Click here to open Lab - assignment 09"> Lab09</a>
