--- a/MovieReview.html
+++ b/MovieReview.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
 	<title>TMNT - Rancid Tomatoes</title>
 
@@ -80,7 +79,7 @@
 						attempts to look polished and 'cool,' but the been-there animation can't compete with the
 						then-cutting-edge puppetry of the 1990 live-action movie.</q>
 				</p>
-				<p id="comment_images">
+				<p class="comment_images">
 					<img src="images/critic.gif" alt="Critic" />
 					Peter Debruge <br />
 					Variety
@@ -92,7 +91,7 @@
 						new
 						ones.</q>
 				</p>
-				<p id="comment_images">
+				<p class="comment_images">
 					<img src="images/critic.gif" alt="Critic" />
 					Todd Gilchrist <br />
 					IGN Movies
@@ -102,7 +101,7 @@
 					<img src="images/rotten.gif" alt="Rotten" />
 					<q>It stinks!</q>
 				</p>
-				<p id="comment_images">
+				<p class="comment_images">
 					<img src="images/critic.gif" alt="Critic" />
 					Jay Sherman (unemployed)
 				</p>
@@ -113,7 +112,7 @@
 						stopped
 						them from becoming dull.</q>
 				</p>
-				<p id="comment_images">
+				<p class="comment_images">
 					<img src="images/critic.gif" alt="Critic" />
 					Joshua Tyler <br />
 					CinemaBlend.com
@@ -123,7 +122,7 @@
 					<img src="images/rotten.gif" alt="Rotten" />
 					<q>YOUR REVIEW HERE</q>
 				</p>
-				<p id="comment_images">
+				<p class="comment_images">
 					<img src="images/critic.gif" alt="Critic" />
 					NAME <br />
 					PUBLICATION
