--- a/MovieReview.html
+++ b/MovieReview.html
@@ -195,8 +195,8 @@
 		</div>
 	</div>
 	<div class="validation_section">
-		<a href="https://validator.w3.org/check/referer"><img src="images/w3c-html.png" alt="Valid HTML5" /></a> <br />
-		<a href="http://jigsaw.w3.org/css-validator"><img src="images/w3c-css.png" alt="Valid CSS" /></a>
+		<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2FMovieReview"><img src="images/w3c-html.png" alt="Valid HTML5" /></a> <br />
+		<a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2FMovieReview&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"><img src="images/w3c-css.png" alt="Valid CSS" /></a>
 	</div>
 </body>
 
