added two new pages

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <li><a href="GradesPage" title="Click here to open grade submission page"> Lab04 - GradePage</a>
 <li><a href="Signup" title="Click here to open signup form"> Lab05 - Signup form</a>
 <li><a href="MovieReview" title="Click here to open movie review form"> Lab06 - Movie review</a>
-<li><a href="#" title="Click here to open Lab - assignment 07"> Lab07</a>
-<li><a href="#" title="Click here to open Lab - assignment 08"> Lab08</a>
+<li><a href="OnClickAlert" title="Click here to open on Click Alert"> Lab07 - On Click Alert</a>
+<li><a href="TipCalculator" title="Click here to open Tip Calculator"> Lab08 - Calculate payment</a>
 <li><a href="#" title="Click here to open Lab - assignment 09"> Lab09</a>
 <li><a href="#" title="Click here to open Lab - assignment 10"> Lab10</a>
 <li><a href="#" title="Click here to open Final - assignment"> Final Project</a>
