--- a/TipCalculator.html
+++ b/TipCalculator.html
@@ -1,13 +1,11 @@
-
 <!DOCTYPE html>
-<html>
 
 <head>
 	<!--
 	CSE 190M, Summer 2012
 	This file is a tip calculator page using JavaScript.
 	-->
-<script>
+<script type="text/javascript">
 function calcTip() {
 
 
@@ -18,7 +16,7 @@ function calcTip() {
 
 }
 
-</script type="text/javascript">
+</script>
 	
 		<title>Tip_Calculator</title>
 		
@@ -41,7 +39,7 @@ function calcTip() {
 		</div>
 		<br>
 		<div>
-			<button id="btn"  onclick="calcTip();" />Calculate Tip</button>
+			<button id="btn"  onclick="calcTip();">Calculate Tip</button>
 		</div>
 
 		<hr />
