--- a/OnClickAlert.html
+++ b/OnClickAlert.html
@@ -4,7 +4,7 @@
 	CSE 190M, Summer 2012
 	This file is a tip calculator page using JavaScript.
 	-->
-<script type="text/javascript">
+<script>
 function clickMe() {
 
 alert("You clicked me!");
@@ -21,7 +21,7 @@ alert("You clicked me!");
 	<body>
 		<div> <h1> Click Me</h1></div>
 		<div>
-			<button id="btn"  onclick="clickMe();" />Click Me</button>
+			<button id="btn"  onclick="clickMe();">Click Me</button>
 		</div>
 		<div> <br><br></div>
 
