--- a/TipCalculator.html
+++ b/TipCalculator.html
@@ -5,7 +5,7 @@
 	CSE 190M, Summer 2012
 	This file is a tip calculator page using JavaScript.
 	-->
-<script type="text/javascript">
+<script>
 function calcTip() {
 
 
