--- a/TipCalculator.html
+++ b/TipCalculator.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 
+<html lang="en">
 <head>
+   <meta charset="UTF-8">
 	<!--
 	CSE 190M, Summer 2012
 	This file is a tip calculator page using JavaScript.
