--- a/Recipe.html
+++ b/Recipe.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
 
 <title> Recipe</title>
-<link type="text/css" rel="stylesheet" href="HomeworkOne.css">
+<link type="text/css" rel="stylesheet" href="Recipe.css">
 </head>
 <body>
 
