--- a/decoratemytext.html
+++ b/decoratemytext.html
@@ -1,7 +1,7 @@
-
 <!DOCTYPE html>
-<html>
-	<head>
+<html lang="en">
+<head>
+   <meta charset="UTF-8">
 		<title>Text Decorator</title>
 		<link href="decoratemytext.css" type="text/css" rel="stylesheet" />
 		<script src="decoratemytext.js">
@@ -36,9 +36,9 @@
 	<footer>
 	<div>
 	<br><br>
-	<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2FGradesPage">
+	<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2Fdecoratemytext">
 	<img alt="validator-1" src="https://manalabs.org/img/w3c-html.png"></a>
-	<a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2FGradesPage&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+	<a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2Fdecoratemytext&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
 	<img alt="validator-2" src="https://manalabs.org/img/w3c-css.png"></a>
 	</div>
 	</footer>	
