--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <li><a href="MovieReview" title="Click here to open movie review form"> Lab06 - Movie review</a>
 <li><a href="OnClickAlert" title="Click here to open on Click Alert"> Lab07 - On Click Alert</a>
 <li><a href="TipCalculator" title="Click here to open Tip Calculator"> Lab08 - Calculate payment</a>
-<li><a href="#" title="Click here to open Lab - assignment 09"> Lab09</a>
-<li><a href="#" title="Click here to open Lab - assignment 10"> Lab10</a>
+<li><a href="#" title="Click here to open Lab - decorate my text"> Lab09 - decorate my text</a>
+<li><a href="#" title="Click here to open Lab - timer excercise"> Lab10 - timer exercise</a>
 <li><a href="#" title="Click here to open Final - assignment"> Final Project</a>
 </ul>
 
