--- a/ASCIIImation.html
+++ b/ASCIIImation.html
@@ -5,8 +5,8 @@
 		<title>ASCIImation</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="ascii.css" type="text/css" rel="stylesheet">
-		<script src="animations.js" type="text/javascript"></script>
-		<script src="ascii.js" type="text/javascript"></script>
+		<script src="animations.js"></script>
+		<script src="ascii.js"></script>
     </head>
 	
     <body>
@@ -49,9 +49,9 @@
 <footer>
 <div>
 <br><br>
-<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2FGradesPage">
+<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2FASCIIImation">
 <img alt="validator-1" src="https://manalabs.org/img/w3c-html.png"></a>
-<a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2FGradesPage&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+<a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2FASCIIImation&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
 <img alt="validator-2" src="https://manalabs.org/img/w3c-css.png"></a>
 </div>
 </footer>
