--- a/BankAccount.html
+++ b/BankAccount.html
@@ -1,10 +1,12 @@
-<!doctype html>
-<html lan="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
+   <meta charset="UTF-8">
+
 <title> bank account Creation</title>
 <link href="BankAccount.css" type="text/css" rel="stylesheet"/>
 <script src="BankAccount.js"></script>
-<head>
+</head>
 <body>
 <h1>bank account creation</h1>
 <div>
@@ -17,13 +19,13 @@
 
 <br><br>
 <div>
-<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2FGradesPage">
+<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2FBankAccount">
 <img alt="validator-1" src="https://manalabs.org/img/w3c-html.png"></a>
-<a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2FGradesPage&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+<a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2FBankAccount&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
 <img alt="validator-2" src="https://manalabs.org/img/w3c-css.png"></a>
 </div>
 </footer>
 
 </body>
-<html>
+</html>
 
