--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <li><a href="TipCalculator" title="Click here to open Tip Calculator"> Lab08 - Calculate payment</a>
 <li><a href="DecorateMyText" title="Click here to open Lab - decorate my text"> Lab09 - decorate my text</a>
 <li><a href="TimerExcerice" title="Click here to open Lab - timer excercise"> Lab10 - timer exercise</a>
-<li><a href="ASCIIImation" title="Click here to open Lab animation"> Animation assignment</a>
-<li><a href="BankAccount" title="Click here to open Lab - BankAccount"> BankAccount Opening Assignmnt</a>
+<li><a href="ASCIIImation" title="Click here to open Lab animation"> Lab11 - ASCII Animation</a>
+<li><a href="BankAccount" title="Click here to open Lab - BankAccount"> Lab12 - BankAccount Opening</a>
 <li><a href="#" title="Click here to open Final - assignment"> Final Project</a>
 <li><a href="#" title="Click here to open Final - assignment"> Final Project</a>
 </ul>
