--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <li><a href="TimerExcerice" title="Click here to open Lab - timer excercise"> Lab10 - timer exercise</a>
 <li><a href="ASCIIImation" title="Click here to open Lab animation"> Lab11 - ASCII Animation</a>
 <li><a href="BankAccount" title="Click here to open Lab - BankAccount"> Lab12 - BankAccount Opening</a>
-<li><a href="#" title="Click here to open Final - assignment"> Final Project</a>
+<li><a href="ScopeExercises" title="Click here to open Lab - ScopeExercise"> Scope Exercise</a>
 <li><a href="#" title="Click here to open Final - assignment"> Final Project</a>
 </ul>
 
