--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <li><a href="OnClickAlert" title="Click here to open on Click Alert"> Lab07 - On Click Alert</a>
 <li><a href="TipCalculator" title="Click here to open Tip Calculator"> Lab08 - Calculate payment</a>
 <li><a href="decoratemytext" title="Click here to open Lab - decorate my text"> Lab09 - decorate my text</a>
-<li><a href="TimerExerice" title="Click here to open Lab - timer excercise"> Lab10 - timer exercise</a>
+<li><a href="TimerExercise" title="Click here to open Lab - timer excercise"> Lab10 - timer exercise</a>
 <li><a href="ASCIIImation" title="Click here to open Lab animation"> Lab11 - ASCII Animation</a>
 <li><a href="BankAccount" title="Click here to open Lab - BankAccount"> Lab12 - BankAccount Opening</a>
 <li><a href="ScopeExercises" title="Click here to open Lab - ScopeExercise"> Scope Exercise</a>
