--- a/test.html
+++ b/test.html
@@ -10,39 +10,23 @@
 <div class="center">
 this is may page.
 <script>
-var pattern = new Image();
-pattern.src = "united_kingdom.png";
-var ph = pattern.height;
-    
-function animate()
-{
-   setInterval(drawShape, 500);
+function job(state) {
+return new Promise(function(resolve, reject) { if (state) {
+resolve('success');
+} else {
+reject('error');
 }
-         
-function drawShape()
-{
-   var canvas = document.getElementById('mycanvas');
-   var ctx = canvas.getContext('2d');
-   var iw = pattern.width;
-   var ih = pattern.height;
-   ctx.clearRect(0, 0, 400, 400);
-
-   if(ph <= 0)
-   {
-      ph = ih;
-   }
-   else
-   {
-      ph -= 20;
-   }
-
-   for(var x = 0; x < iw; x++)
-   {
-      // 8 = height of wave, 20 = frequency, 38 = vertical offset
-      var y = 8 * Math.sin((x + ph)/20) + 38;
-      ctx.drawImage(pattern, x, 0, 1, ih, x, y, 1, ih);
-   }
+});
 }
+
+let promise = job(true);
+
+promise.then(function(data) {
+document.write(data); return job(false);})
+.catch(function(error) {
+document.write(error); return 'Error caught';
+});
+document.write(promise);
 </script>
 
 The behavior could be thought of as a minimum gutter, as if the gutter is bigger somehow (because of something like justify-content: space-between;) then the gap will only take effect if that space would end up smaller.
