--- a/test.html
+++ b/test.html
@@ -6,28 +6,30 @@
 <link href="test.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
+
+<script>
+
+var foo = 1; 
+function bar() {
+document.write(foo+"=-=");
+if (!foo) {
+
+	var foo = 10;
+}
+document.write(foo +"ggg");
+}
+
+bar();
+document.write("**"+foo+"==");
+
+ 
+
+
+</script>
 <div class="positioner">
 <div class="center">
 this is may page.
-<script>
-function job(state) {
-return new Promise(function(resolve, reject) { if (state) {
-resolve('success');
-} else {
-reject('error');
-}
-});
-}
 
-let promise = job(true);
-
-promise.then(function(data) {
-document.write(data); return job(false);})
-.catch(function(error) {
-document.write(error); return 'Error caught';
-});
-document.write(promise);
-</script>
 
 The behavior could be thought of as a minimum gutter, as if the gutter is bigger somehow (because of something like justify-content: space-between;) then the gap will only take effect if that space would end up smaller.
 
