--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <li><a href="BankAccount" title="Click here to open Lab - BankAccount"> Lab12 - BankAccount Opening</a>
 <li><a href="ScopeExercises" title="Click here to open Lab - ScopeExercise"> Scope Exercise</a>
 <li><a href="ModuleExercise" title="Click here to open Lab- module exercise assignment"> Module Exercise</a>
-<li><a href="AnswerJQueyQuiz" title="Click here to open Lab - answer jQuery"> jQuery Quiz</a>
+<li><a href="AnswerJQueryQuiz" title="Click here to open Lab - answer jQuery"> jQuery Quiz</a>
 </ul>
 
 <footer>
