--- a/AnswerJQueryQuiz.html
+++ b/AnswerJQueryQuiz.html
@@ -14,11 +14,11 @@
 </li>
 <li>Write jQuery code to find all h1 elements that are children of a div element and make their background
 color red.
- <img src="images/question2.jpg" width=800px height=450px alt="question two">
+ <img src="images/question2.JPG" width="800px" height="450px" alt="question two">
   
 </li>
 <li>Use a jQuery method to insert the text "YES!" at the end of the &lt;p&gt; element. 
- <img src="images/question3.jpg" width=800px height=450px alt="question three">
+ <img src="images/question3.JPG" width="800px" height="450px" alt="question three">
 
 
 </li>
