--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
 <li><a href="ScopeExercises" title="Click here to open Lab - ScopeExercise"> Scope Exercise</a>
 <li><a href="ModuleExercise" title="Click here to open Lab- module exercise assignment"> Module Exercise</a>
 <li><a href="AnswerJQueryQuiz" title="Click here to open Lab - answer jQuery"> jQuery Quiz</a>
+
+<li><a href="MazeGame" title="Click here to open Lab - Maze game"> Maze Game</a>
+
+<li><a href="AnswerJQueryQuiz2" title="Click here to open Lab - answer jQuery 2"> jQuery Quiz-2</a>
+
+
 </ul>
 
 <footer>
