--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <li><a href="MazeGame" title="Click here to open Lab - Maze game"> Maze Game</a>
 
-<li><a href="AnswerJQueryQuiz2" title="Click here to open Lab - answer jQuery 2"> jQuery Quiz-2</a>
+<li><a href="AnswerjQueryQuiz2" title="Click here to open Lab - answer jQuery 2"> jQuery Quiz-2</a>
 
 
 </ul>
