--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <li><a href="MazeGame" title="Click here to open Lab - Maze game"> Maze Game</a>
 
 <li><a href="AnswerjQueryQuiz2" title="Click here to open Lab - answer jQuery 2"> jQuery Quiz-2</a>
+<li><a href="puzzle" title="Click here to open Lab - answer puzzle 15"> Puzzle 15</a>
 
 
 </ul>
