--- a/puzzle.html
+++ b/puzzle.html
@@ -37,9 +37,9 @@
 
 		
 		<div>
-		<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fvalidator.w3.org%2Fnu%2F%3Fdoc%3Dhttps%253A%252F%252Fyenealem-fl.github.io%252Fyenealem.github.io%252F">
+		<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2Fpuzzle">
   		<img alt="validator-1" src="https://manalabs.org/img/w3c-html.png"></a>
-		<a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"><img alt="validator-2" src="https://manalabs.org/img/w3c-css.png"></a>
+		<a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fyenealem-fl.github.io%2Fyenealem.github.io%2Fpuzzle&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"><img alt="validator-2" src="https://manalabs.org/img/w3c-css.png"></a>
 		<br><br></div>
 
 	
