--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
 <li><a href="AnswerjQueryQuiz2" title="Click here to open Lab - answer jQuery 2"> jQuery Quiz-2</a>
 <li><a href="puzzle" title="Click here to open Lab - answer puzzle 15"> Puzzle 15</a>
+<li><a href="QUIZ3.txt" title="Click here to open Lab - answer QUIZ3"> QUIZ III</a>
 
 
 </ul>
