--- a/NodeFolder/SimpleAdder.html
+++ b/NodeFolder/SimpleAdder.html
@@ -10,7 +10,14 @@
 <input type = "text" name="first"/><br/><br>
 <label>second number</label><br>
 <input type = "text" name="second"/><br/><br>
-<input type="submit" value="Click"/>
+<h3> Select operator:</h3>
+<input type="radio" name="operator" value="addition">Addition</input>
+<input type="radio" name="operator" value="subtraction">Subtraction</input>
+<input type="radio" name="operator" value="multiplication">Multiplication</input>
+<input type="radio" name="operator" value="division">Division</input><br><br>
+
+
+<input type="submit" value="Result"/>
 </div>
 </form>
 </body>
