--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
 <li><a href="N1-N2-N3-N4.txt" title="Click here to open Lab - answer N1-N2-N3-N4 webserver exercises"> N1-N2-N3-N4 Exercises</a>
 
+<li><a href="Nodefolder/SimpleAdder" title="Click here to open Lab - answer for simple adder"> Simple adder</a>
 
 </ul>
 
